[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "hboms"
version = "0.1.0"
authors = [
  { name = "Christiaan H. van Dorp", email = "chvandorp@gmail.com" },
]
description = "Hierarchical Bayesian ODE Models with Stan"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "scipy",
  "cmdstanpy",
  "matplotlib",
  "pygments",
  "arviz",
  "ply",
  "networkx",
  "pandas",
  "pyarrow",
  "IPython",
]

[project.urls]
Homepage = "https://github.com/chvandorp/hboms"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
