[metadata]
name = hboms
version = 0.1.0
author = Christiaan H. van Dorp
author_email = chvandorp@gmail.com
description = Hierarchical Bayesian ODE Models with Stan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chvandorp/hboms
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = False
install_requires =
    numpy
    scipy
    cmdstanpy
    matplotlib
    pygments
    arviz
    ply
    IPython
